jss-compiler/tests/semantic_errors/function_return_vector_error.jss
function int[5] getVetor() {
    let int[5] v = [1, 2, 3, 4, 5];
    return v;
}

function void main() {
    let int[5] r = getVetor();
}
